Fixed layout issue

--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ input[type="number"] {
 }
 
 .form-container {
-    grid-row: 4 / 7;
+    grid-row: 4 / 8;
     grid-column: 1 / 11;
     display: grid;
     grid-template: var(--main-grid-template);
@@ -141,13 +141,13 @@ form {
 
 .button-container,
 .login-container {
-    grid-row: 7 / 8;
+    grid-row: 8 / 9;
     grid-column: 1 / 11;
     padding-left: var(--main-padding);
 }
 
 .login-container {
-    grid-row: 8 / 11;
+    grid-row: 9 / 11;
 }
 
 .intro-text-container p {
